--- a/package.json
+++ b/package.json
@@ -4,7 +4,18 @@
   "description": "Elements of the theory of probability in cryptanalysis",
   "main": "core.js",
   "scripts": {
-    "test": "mocha test"
+    "clean": "rimraf node_modules/",
+    "build": "webpack",
+    "deploy:dynamic": "git push heroku master",
+    "deploy:static": "surge -p ./public -d urfu2015-notes.surge.sh",
+    "dev": "webpack --config webpack.dev.config.js && npm start",
+    "deploy": "npm-run-all deploy:*",
+    "lint:js": "eslint --fix .",
+    "lint:css": "stylelint **/*.css",
+    "lint": "npm-run-all lint:*",
+    "start": "NODE_ENV=development node app.js",
+    "test": "mocha --recursive tests/",
+    "precommit": "npm-run-all lint:* test"
   },
   "repository": {
     "type": "git",
@@ -21,6 +32,12 @@
   },
   "homepage": "https://github.com/FrodoTheTrue/cryptoprob#readme",
   "dependencies": {
+    "body-parser": "^1.15.1",
+    "express": "^4.13.4",
+    "fs": "0.0.2",
+    "hbs": "^4.0.0",
+    "morgan": "^1.7.0",
+    "path": "^0.12.7",
     "underscore": "^1.8.3"
   }
 }
